--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- FOR IE -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- GOOGLE FONT -->
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700&display=swap" rel="stylesheet">
+
     <!-- MAIN CSS FILE -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
@@ -19,25 +22,64 @@
 
 <body>
 
-    <header class="site-header">
-        <div class="site-id">
-            [ logo ]
+    <header class="site-header fade-in-and-down">
+        <div class="site-identity">
+            <h1><a href="index.html">Student Name</a></h1>
         </div>
-        <div class="site-nav">
-            [ site nav ]
-        </div>
+        <nav class="site-navigation">
+            <ul>
+                <li><a href="index.html" class="selected">Work</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main class="site-main">
-        <h1>Heading 1</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, esse.</p>
-        <a href="#">Link</a>
+    <main>
+        <section class="featuredproject">
+            <div class="image-wrapper">
+                <a href="mybook/index.html"><img src="img/placeholder-1x1-book3.jpg" alt="Placeholder" /></a>
+            </div>
+            <div class="text-wrapper">
+                <h2 class="headline">Book Project</h2>
+                <h3 class="subheadline">Featured Project #1</h3>
+                <p>Short description of the featured product. Phasellus quis lorem eu purus condimentum rhoncus. Nunc id
+                    elementum mi, non venenatis sem. Curabitur iaculis velit id imperdiet pretium.</p>
+                <a href="mybook/index.html" class="button">View Book Details</a>
+            </div>
+        </section>
+        <section class="featuredproject swapped">
+            <div class="image-wrapper">
+                <a href="#"><img src="img/placeholder-1x1-hero.jpg" alt="Placeholder" /></a>
+            </div>
+            <div class="text-wrapper">
+                <h2 class="headline">Second Project</h2>
+                <h3 class="subheadline">Subheader lorem ipsum</h3>
+                <p>Short description of the featured product. Phasellus quis lorem eu purus condimentum rhoncus. Nunc id
+                    elementum mi, non venenatis sem. Curabitur iaculis velit id imperdiet pretium.</p>
+                <a href="#" class="button">Project #2 Details</a>
+            </div>
+        </section>
+        <section class="featuredproject">
+            <div class="image-wrapper">
+                <a href="#"><img src="img/placeholder-1x1-video.jpg" alt="Placeholder" /></a>
+            </div>
+            <div class="text-wrapper">
+                <h2 class="headline">Third Project</h2>
+                <h3 class="subheadline">Subheader lorem ipsum</h3>
+                <p>Short description of the featured product. Phasellus quis lorem eu purus condimentum rhoncus. Nunc id
+                    elementum mi, non venenatis sem. Curabitur iaculis velit id imperdiet pretium.</p>
+                <a href="#" class="button">View Project #3</a>
+            </div>
+        </section>
     </main>
 
     <footer class="site-footer">
-        <div class="site-nav">
-            [ footer nav ]
-        </div>
+        <nav class="site-navigation">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
     </footer>
 
 </body>
